# skeleton-tracking

./: CMakeLists.txt  keypoints_tracking.cpp  keypoints_tracking.h  main.cpp  readme.md
munkres/include/adapters/: adapter.h
